# shiori

./: .gitignore  package.json
src/: App.tsx  emoji-picker.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/application/: Cargo.toml
src-tauri/crates/application/examples/: search.rs
src-tauri/crates/application/src/: lib.rs
src-tauri/crates/clipboard/: Cargo.toml  README.md  a.c
src-tauri/crates/clipboard/src/: main.rs
src-tauri/crates/x-window/: Cargo.toml  x.sh
src-tauri/crates/x-window/src/: atom.rs  lib.rs  main.rs  window.rs
src-tauri/p/: clipboard-manager.toml
src-tauri/src/: commands.rs  lib.rs
src/components/layout/: Layout.tsx
src/components/ui/: icon.tsx
src/lib/: utils.ts
src/lib/api/: searchApp.ts
src/pages/: EmojiPicker.tsx  EmojiPicker1.tsx  EmojiPicker2.tsx  SearchBox.tsx
