[package]
name = "shiori"
version = "0.1.0"
edition = "2021"
description = "A Tauri App"
authors = ["Hanaasagi <ambiguous404@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Hanaasagi/shiori"
homepage = "https://github.com/Hanaasagi/shiori"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shiori_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
log = "0.4"
application = {path ="./crates/application"}
tauri-plugin-fs = "2"
base64 = "0.22.1"
fuzzy-matcher = "0.3.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = "1.45.1"
